--- a/package.json
+++ b/package.json
@@ -9,9 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@sanity/image-url": "^1.0.2",
+    "@stripe/stripe-js": "^3.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.344.0",
+    "next": "14.1.2",
+    "next-sanity": "^8.1.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.2"
+    "react-icons": "^5.0.1",
+    "react-type-animation": "^3.2.0",
+    "stripe": "^14.19.0",
+    "swiper": "^11.0.7",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "use-shopping-cart": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
